--- a/css/style.css
+++ b/css/style.css
@@ -33,51 +33,7 @@ section {
   width: 100%;
   height: 100%;
   background-size: cover;
+  background-attachment: fixed;
   background-position: center center;
-  -webkit-transform: translateZ(0);
-          transform: translateZ(0);
-  will-change: transform;
-}
-
-.overlay {
-  position: fixed;
-  right: 0;
-  bottom: 30px;
-  left: 0;
-  padding: 0 15px;
-  z-index: 10;
-}
-
-h1 {
-  text-align: center;
-  color: #FFF;
-  font-size: 16px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 300;
-}
-
-h1 a {
-  position: relative;
-  color: inherit;
-  font-weight: 600;
-  text-decoration: none;
-}
-
-h1 a:hover:before {
-  width: 100%;
-  -webkit-transition: width 0.4s;
-  transition: width 0.4s;
-}
-
-h1 a:before {
-  content: '';
-  position: absolute;
-  bottom: -2px;
-  left: 0;
-  width: 0;
-  height: 2px;
-  background-color: #FFF;
-  -webkit-transition: width 0.2s;
-  transition: width 0.2s;
 }
 /*# sourceMappingURL=style.css.map */
