--- a/css/style.scss
+++ b/css/style.scss
@@ -1068,49 +1068,6 @@ section {
     width: 100%;
     height: 100%;
     background-size: cover;
+    background-attachment: fixed;
     background-position: center center;
-    transform: translateZ(0);
-    will-change: transform;
-}
-
-.overlay {
-    position: fixed;
-    right: 0;
-    bottom: 30px;
-    left: 0;
-    padding: 0 15px;
-    z-index: 10;
-}
-
-h1 {
-    text-align: center;
-    color: #FFF;
-    font-size: 16px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
-    
-    a {
-        position: relative;
-        color: inherit;
-        font-weight: 600;
-        text-decoration: none;
-        
-        &:hover {
-            &:before {
-                width: 100%;
-                transition: width 0.4s;
-            }    
-        }   
-        
-        &:before {
-            content: '';
-            position: absolute;
-            bottom: -2px;
-            left: 0;
-            width: 0;
-            height: 2px;
-            background-color: #FFF;
-            transition: width 0.2s;
-        }
-    }
 }
