--- a/css/style.scss
+++ b/css/style.scss
@@ -1051,23 +1051,22 @@ section {
     height: 100%;
 }
 
-.bg-wrap {
-    clip: rect(0, auto, auto, 0);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
+// .bg-wrap {
+//     clip: rect(0, auto, auto, 0);
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+// }
 
-.bg {
-    position: fixed;
-    display: block;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center center;
-}
+// .bg {
+//     position: fixed;
+//     display: block;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     background-size: cover;
+//     background-position: center center;
+// }
