--- a/css/style.scss
+++ b/css/style.scss
@@ -454,20 +454,21 @@ $minbiggerDesktop: 1441px;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
+    background-attachment: fixed;
 }
 
-@supports (-webkit-touch-callout: none) {
-    .bg {
-        background-attachment: none;
-    }
- }
+// @supports (-webkit-touch-callout: none) {
+//     .bg {
+//         background-attachment: none;
+//     }
+//  }
  
- @supports not (-webkit-touch-callout: none) {
-      /* CSS for other than iOS devices */ 
-      .bg {
-        background-attachment: fixed;
-    }
- }
+//  @supports not (-webkit-touch-callout: none) {
+//       /* CSS for other than iOS devices */ 
+//       .bg {
+//         background-attachment: fixed;
+//     }
+//  }
 
 
 // @media (max-width:700px) {
