--- a/css/style.css
+++ b/css/style.css
@@ -411,7 +411,19 @@
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  background-attachment: fixed;
+}
+
+@supports (-webkit-touch-callout: none) {
+  .bg {
+    background-attachment: none;
+  }
+}
+
+@supports not (-webkit-touch-callout: none) {
+  /* CSS for other than iOS devices */
+  .bg {
+    background-attachment: fixed;
+  }
 }
 
 @media (max-width: 700px) {
